response to documentintelligence package upgrade

--- a/01_extractLayout.ipynb
+++ b/01_extractLayout.ipynb
@@ -12,7 +12,7 @@
     "from dotenv import load_dotenv\n",
     "from azure.core.credentials import AzureKeyCredential\n",
     "from azure.ai.documentintelligence import DocumentIntelligenceClient\n",
-    "from azure.ai.documentintelligence.models import ContentFormat\n",
+    "from azure.ai.documentintelligence.models import DocumentContentFormat\n",
     "import tiktoken\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
@@ -103,7 +103,7 @@
    "id": "5067951c",
    "metadata": {},
    "source": [
-    "<h5>Form Recognizer - Layout Model によるテキストの抽出\n",
+    "<h5>Document Intelligence - Layout Model によるテキストの抽出\n",
     "</h5>"
    ]
   },
@@ -122,7 +122,7 @@
     "for pdf in next(os.walk(pdf_dir))[2]:\n",
     "\n",
     "    with open(os.path.join(pdf_dir, pdf), \"rb\") as f:        \n",
-    "        poller = document_analysis_client.begin_analyze_document(\"prebuilt-layout\", analyze_request=f, content_type=\"application/octet-stream\")\n",
+    "        poller = document_analysis_client.begin_analyze_document(\"prebuilt-layout\", body=f, content_type=\"application/octet-stream\")\n",
     "        result = poller.result()\n",
     "        text = result.content.replace(\":unselected:\", \"\").replace(\":selected:\", \"\")\n",
     "\n",
@@ -146,10 +146,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "06cd7d7e",
+   "metadata": {},
+   "source": [
+    "### 以下は参考のため記載しています。実行しないでください。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a3c3986b",
    "metadata": {},
    "source": [
-    "<h5>Form Recognizer - Layout Model によるテキストの抽出 (Mark Down)\n",
+    "<h5>Document Intelligence - Layout Model によるテキストの抽出 (Mark Down)\n",
     "</h5>"
    ]
   },
@@ -160,6 +168,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
+    "# Unify the format of headings in markdown text\n",
     "def convert_markdown_headings(markdown_text):\n",
     "    # Convert \"===\" headers to \"#\"\n",
     "    markdown_text = re.sub(r'^(.*?)\\n={3,}$', r'# \\1', markdown_text, flags=re.MULTILINE)\n",
@@ -173,31 +184,90 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3563a226",
+   "id": "91e4bea8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = Path('./pdf/serviceInfo.pdf')\n",
-    "output_path = Path('./text')\n",
-    "os.makedirs(output_path, exist_ok=True)\n",
+    "pdf_dir = Path('./pdf')\n",
+    "text_dir = Path('./text2')\n",
+    "text_path = Path(os.path.join(pdf_dir, text_dir))\n",
+    "os.makedirs(text_path, exist_ok=True)\n",
     "\n",
+    "for pdf in next(os.walk(pdf_dir))[2]:\n",
     "\n",
-    "with open(input_path, \"rb\") as f:        \n",
-    "    #data_bytes = f.read()\n",
-    "    poller = document_analysis_client.begin_analyze_document(\"prebuilt-layout\", analyze_request=f, content_type=\"application/octet-stream\", output_content_format=ContentFormat.MARKDOWN)\n",
-    "    result = poller.result()\n",
-    "    text = convert_markdown_headings(result.content)\n",
-    "    #text = result.content.replace('\\n',' \\n').replace(\":unselected:\", \" \")\n",
+    "    with open(os.path.join(pdf_dir, pdf), \"rb\") as f:        \n",
+    "        poller = document_analysis_client.begin_analyze_document(\n",
+    "            \"prebuilt-layout\", body=f, content_type=\"application/octet-stream\", output_content_format=DocumentContentFormat.MARKDOWN \n",
+    "        )\n",
+    "        \n",
+    "        result = poller.result()\n",
+    "        md_content = result.content\n",
+    "        md_content = convert_markdown_headings(result.content)\n",
     "\n",
-    "    out_fname = Path(input_path).stem + \".md\"\n",
-    "    with open(os.path.join(output_path, out_fname), 'w', encoding='utf-8') as outfile:\n",
-    "        outfile.write(text)"
+    "        title = Path(pdf).stem\n",
+    "        out_fname = title + \".md\"\n",
+    "        with open(os.path.join(text_path, out_fname), 'w', encoding='utf-8') as outfile:\n",
+    "            #outfile.write(text)\n",
+    "            outfile.write(md_content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b5c1719",
+   "metadata": {},
+   "source": [
+    "### Chunk Markdown documents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3eeb6d8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.text_splitter import MarkdownHeaderTextSplitter\n",
+    "# Split the document into chunks base on markdown headers.\n",
+    "headers_to_split_on = [\n",
+    "    (\"#\", \"Header 1\"),\n",
+    "#    (\"##\", \"Header 2\"),\n",
+    "#    (\"###\", \"Header 3\"),\n",
+    "]\n",
+    "# Include the headers in the splits.\n",
+    "text_splitter = MarkdownHeaderTextSplitter(headers_to_split_on=headers_to_split_on, strip_headers=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91bb04b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_dir = Path('./pdf')\n",
+    "text_dir = Path('./text2')\n",
+    "chunks_dir = Path('./chunks')\n",
+    "text_path = Path(os.path.join(pdf_dir, text_dir))\n",
+    "chunks_path = Path(os.path.join(pdf_dir, chunks_dir))\n",
+    "os.makedirs(chunks_path, exist_ok=True)\n",
+    "\n",
+    "for text in next(os.walk(text_path))[2]:\n",
+    "\n",
+    "    with open(os.path.join(text_path, text), 'r', encoding=\"utf-8\") as f:        \n",
+    "        content = f.read()\n",
+    "        splits = text_splitter.split_text(content)\n",
+    "\n",
+    "        for i, split in enumerate(splits):\n",
+    "            title = Path(text).stem\n",
+    "            out_fname = title + f\"_{i}.md\"\n",
+    "            with open(os.path.join(chunks_path, out_fname), 'w', encoding='utf-8') as outfile:\n",
+    "                outfile.write(split.page_content)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py12",
    "language": "python",
    "name": "python3"
   },
@@ -211,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
