--- a/02_prepare_index01.ipynb
+++ b/02_prepare_index01.ipynb
@@ -321,7 +321,7 @@
    "outputs": [],
    "source": [
     "# Semantic Hybrid Search\n",
-    "query = \"CIF検索結果の出力条件を教えて欲しい。\"  \n",
+    "query = \"パーキングブレーキについて教えてください。\"  \n",
     "\n",
     "search_client = SearchClient(service_endpoint, index_name, AzureKeyCredential(key))\n",
     "vector_query = VectorizedQuery(vector=generate_embeddings(query, embedding_model, client), k_nearest_neighbors=10, fields=\"contentVector\")\n",
@@ -374,10 +374,10 @@
    "outputs": [],
    "source": [
     "from azure.core.exceptions import HttpResponseError\n",
-    "query = \"被監査会社の住所とCIF登録住所が相違する場合は、不備返却にチェックの上、「不備返却内容コメント」欄に不備内容を入力する対応で良いでしょうか。\" \n",
+    "query = \"パーキングブレーキについて教えてください。\" \n",
     "\n",
     "search_client = SearchClient(service_endpoint, index_name, AzureKeyCredential(key))\n",
-    "vector_query = VectorizedQuery(vector=utils.generate_embeddings(query, embedding_model, client), k_nearest_neighbors=3, fields=\"contentVector\")\n",
+    "vector_query = VectorizedQuery(vector=generate_embeddings(query, embedding_model, client), k_nearest_neighbors=3, fields=\"contentVector\")\n",
     "\n",
     "try:\n",
     "    results = search_client.search(  \n",
@@ -472,11 +472,11 @@
    "outputs": [],
    "source": [
     "# Semantic Hybrid Search\n",
-    "query = \"提携コンビニでの ATM 手数料を教えてください。\"  \n",
+    "query = \"パーキングブレーキについて教えてください。\"\n",
     "\n",
     "search_client = SearchClient(service_endpoint, index_name, AzureKeyCredential(key))\n",
-    "vector_query_1 = VectorizedQuery(vector=utils.generate_embeddings(query, embedding_model, client), k_nearest_neighbors=3, fields=\"titleVector\")\n",
-    "vector_query_2 = VectorizedQuery(vector=utils.generate_embeddings(query, embedding_model, client), k_nearest_neighbors=3, fields=\"contentVector\")\n",
+    "vector_query_1 = VectorizedQuery(vector=generate_embeddings(query, embedding_model, client), k_nearest_neighbors=3, fields=\"titleVector\")\n",
+    "vector_query_2 = VectorizedQuery(vector=generate_embeddings(query, embedding_model, client), k_nearest_neighbors=3, fields=\"contentVector\")\n",
     "\n",
     "results = search_client.search(  \n",
     "    search_text=query,  \n",
@@ -522,7 +522,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py12",
    "language": "python",
    "name": "python3"
   },
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
