--- a/03_inference01.ipynb
+++ b/03_inference01.ipynb
@@ -122,6 +122,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h5> *** FUNCTION DEFINITION 以降を先に実行する *** </h5>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -130,7 +137,7 @@
     "with open(\"./01_businessSupport_sys_msg01.txt\", \"r\", encoding = 'utf-8') as f:\n",
     "    system_message = f.read()\n",
     "\n",
-    "user_context = \"<place holder>\""
+    "user_context = \"パーキングブレーキについて教えてください。\""
    ]
   },
   {
@@ -167,17 +174,6 @@
    "outputs": [],
    "source": [
     "messages.append({\"role\": \"user\",\"content\": \"Search Index からいくつのドキュメントが得られましたか\"})\n",
-    "response_message, messages = call_gpt4(messages, tools=tools, tool_choice='auto')\n",
-    "print(response_message.content)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "messages.append({\"role\": \"user\",\"content\": \"<place holder>\"})\n",
     "response_message, messages = call_gpt4(messages, tools=tools, tool_choice='auto')\n",
     "print(response_message.content)"
    ]
@@ -290,7 +286,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py12",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
