--- a/03_inference01.ipynb
+++ b/03_inference01.ipynb
@@ -125,64 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5> *** FUNCTION DEFINITION 以降を先に実行する *** </h5>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"./01_businessSupport_sys_msg01.txt\", \"r\", encoding = 'utf-8') as f:\n",
-    "    system_message = f.read()\n",
-    "\n",
-    "user_context = \"パーキングブレーキについて教えてください。\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Function Calling のあるケース"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "messages = []\n",
-    "messages.append({\"role\": \"system\",\"content\": system_message})\n",
-    "messages.append({\"role\": \"user\", \"content\": user_context})\n",
-    "response_message, messages = call_gpt4(messages, tools=tools, tool_choice='auto', user_context=user_context)\n",
-    "print(response_message.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "さらに質問"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "messages.append({\"role\": \"user\",\"content\": \"Search Index からいくつのドキュメントが得られましたか\"})\n",
-    "response_message, messages = call_gpt4(messages, tools=tools, tool_choice='auto')\n",
-    "print(response_message.content)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### FUNCTION DEFINITION"
+    "### TOOLS DEFINITION"
    ]
   },
   {
@@ -249,7 +192,6 @@
     "        concatenated_documents += f\"<DOCUMENT>\\nCategory Name: {doc['category']}\\nTitle: {doc['title']}\\nContent: {doc['content']}\\n</DOCUMENT>\\n\"\n",
     "    \n",
     "    #concatenated_documents += '\\n' + user_context\n",
-    "\n",
     "    return concatenated_documents\n",
     "\n",
     "\n",
@@ -280,7 +222,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### temp"
+    "### Query"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./01_businessSupport_sys_msg01.txt\", \"r\", encoding = 'utf-8') as f:\n",
+    "    system_message = f.read()\n",
+    "\n",
+    "user_context = \"パーキングブレーキについて教えてください。\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Function Calling のあるケース"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages = []\n",
+    "messages.append({\"role\": \"system\",\"content\": system_message})\n",
+    "messages.append({\"role\": \"user\", \"content\": user_context})\n",
+    "response_message, messages = call_gpt4(messages, tools=tools, tool_choice='auto', user_context=user_context)\n",
+    "print(response_message.content)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "さらに質問"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages.append({\"role\": \"user\",\"content\": \"Search Index からいくつのドキュメントが得られましたか\"})\n",
+    "response_message, messages = call_gpt4(messages, tools=tools, tool_choice='auto')\n",
+    "print(response_message.content)"
    ]
   }
  ],
