notebook11 added, evaluation updated

--- a/01_extractLayout.ipynb
+++ b/01_extractLayout.ipynb
@@ -149,7 +149,7 @@
    "id": "06cd7d7e",
    "metadata": {},
    "source": [
-    "### 以下は参考のため記載しています。実行しないでください。"
+    "### 以下は参考のため記載しています。"
    ]
   },
   {
@@ -168,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
+    "import os, re\n",
+    "from pathlib import Path\n",
     "\n",
     "# Unify the format of headings in markdown text\n",
     "def convert_markdown_headings(markdown_text):\n",
