--- a/04_evaluation.ipynb
+++ b/04_evaluation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,21 +38,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"./answer_sample.md\", \"r\", encoding = 'utf-8') as f:\n",
-    "    answer = f.read()\n",
+    "    response = f.read()\n",
     "with open(\"./context_sample.txt\", \"r\", encoding = 'utf-8') as f:\n",
     "    context = f.read()\n",
-    "query = \"パーキングブレーキについて教えてください。\"\n",
-    "\n",
-    "query_response = dict(\n",
-    "    query=query,\n",
-    "    context=context,\n",
-    "    response=answer\n",
-    ")"
+    "with open(\"./ground_truth.md\", \"r\", encoding = 'utf-8') as f:\n",
+    "    ground_truth = f.read()\n",
+    "query = \"PCS警告灯が点滅または点灯する場合の対処法\"\n"
    ]
   },
   {
@@ -64,21 +60,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'groundedness': 5.0, 'gpt_groundedness': 5.0, 'groundedness_reason': 'The RESPONSE is fully grounded in the CONTEXT, providing a thorough and accurate answer to the QUERY with all relevant details included.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialzing Groundedness evaluator\n",
     "groundedness_eval = GroundednessEvaluator(model_config)\n",
     "\n",
+    "query_response = dict(query=query, context=context, response=response)\n",
     "# Running Groundedness Evaluator on a query and response pair\n",
     "groundedness_score = groundedness_eval(\n",
     "    **query_response\n",
@@ -95,27 +84,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'retrieval': 5.0, 'gpt_retrieval': 5.0, 'retrieval_reason': 'The context fully addresses the query with highly relevant information about the parking brake, and the most pertinent chunks are well-ranked at the top. This aligns with the definition of a Score of 5.'}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "retrieval_eval = RetrievalEvaluator(model_config)\n",
     "query_response = dict(query=query, context=context)\n",
@@ -134,17 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'relevance': 4.0, 'gpt_relevance': 4.0, 'relevance_reason': 'The RESPONSE fully and accurately addresses the QUERY by providing detailed and relevant information about the parking brake, including its operation, warnings, and additional considerations. It is complete and directly relevant to the question.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "relevance_eval = RelevanceEvaluator(model_config)\n",
     "query_response = dict(query=query, response=context)\n",
@@ -176,11 +139,139 @@
     "# Initialzing Groundedness Pro evaluator\n",
     "# Supported regions are ueaastus2 and sweedencentral\n",
     "groundedness_pro_eval = GroundednessProEvaluator(azure_ai_project=azure_ai_project, credential=credential)\n",
+    "query_response = dict(query=query, context=context, response=response)\n",
     "\n",
     "groundedness_pro_score = groundedness_pro_eval(\n",
     "    **query_response\n",
     ")\n",
     "print(groundedness_pro_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BleuScoreEvaluator\n",
+    "BLEU score measures the similarity by shared n-grams between the generated text and the ground truth, focusing more on precision and indirectly on recall."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.evaluation import BleuScoreEvaluator\n",
+    "bleu = BleuScoreEvaluator()\n",
+    "\n",
+    "query_response = dict(response=response, ground_truth=ground_truth)\n",
+    "result = bleu(\n",
+    "    **query_response\n",
+    ")\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GleuScoreEvaluator\n",
+    "GLEU score measures the similarity by shared n-grams between the generated text and ground truth, similar to the BLEU score, focusing on both precision and recall. It addresses the drawbacks of the BLEU score using a per-sentence reward objective."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.evaluation import GleuScoreEvaluator\n",
+    "gleu = GleuScoreEvaluator()\n",
+    "\n",
+    "query_response = dict(response=response, ground_truth=ground_truth)\n",
+    "\n",
+    "result = gleu(\n",
+    "    **query_response\n",
+    ")\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MeteorScoreEvaluator\n",
+    "METEOR score measures the similarity by shared n-grams between the generated text and the ground truth, similar to the BLEU score, focusing on precision and recall. It addresses limitations of other metrics like the BLEU score by considering synonyms, stemming, and paraphrasing for content alignment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.evaluation import MeteorScoreEvaluator\n",
+    "meteor = MeteorScoreEvaluator(alpha=0.9, beta=3.0, gamma=0.5)\n",
+    "\n",
+    "query_response = dict(response=response, ground_truth=ground_truth)\n",
+    "\n",
+    "result = meteor(\n",
+    "    **query_response\n",
+    ")\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RougeScoreEvaluator\n",
+    "ROUGE measures the similarity by shared n-grams between the generated text and the ground truth. <br>\n",
+    "ROUGE precision reflects the fraction of the n-grams in the response that are also in the ground truth. <br>\n",
+    "ROUGE recall is the fraction of n-grams in ground truth that also appear in the response. <br>\n",
+    "ROUGE f1_score is calculated from ROUGE precision and ROUGE recall."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.evaluation import RougeScoreEvaluator, RougeType\n",
+    "rouge = RougeScoreEvaluator(rouge_type=RougeType.ROUGE_1)\n",
+    "\n",
+    "query_response = dict(response=response, ground_truth=ground_truth)\n",
+    "\n",
+    "result = rouge(\n",
+    "    **query_response\n",
+    ")\n",
+    "\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.evaluation import evaluate\n",
+    "\n",
+    "result = evaluate(\n",
+    "    data=\"query_response.jsonl\",\n",
+    "    evaluators={\n",
+    "        \"bleu\": bleu,\n",
+    "        \"gleu\": gleu,\n",
+    "        \"meteor\": meteor,\n",
+    "        \"rouge\": rouge,\n",
+    "    },\n",
+    "    # Optionally provide your AI Studio project information to track your evaluation results in your Azure AI Studio project\n",
+    "    azure_ai_project=azure_ai_project,\n",
+    ")"
    ]
   }
  ],
