Extract figures and the other

--- a/01_extractLayout.ipynb
+++ b/01_extractLayout.ipynb
@@ -12,7 +12,7 @@
     "from dotenv import load_dotenv\n",
     "from azure.core.credentials import AzureKeyCredential\n",
     "from azure.ai.documentintelligence import DocumentIntelligenceClient\n",
-    "from azure.ai.documentintelligence.models import DocumentContentFormat\n",
+    "from azure.ai.documentintelligence.models import DocumentContentFormat, AnalyzeOutputOption, AnalyzeResult\n",
     "import tiktoken\n",
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "\n",
@@ -71,7 +71,8 @@
     "    chunk_overlap=500\n",
     ")\n",
     "\n",
-    "#テキストファイルを読み込んで、指定のトークン数のチャンクファイルに分割します。\n",
+    "#テキストファイルを読み込んで、指定のトークン数のチャンクファイルに分割します。Load the text file and split it into chunk files with the specified number of tokens.\n",
+    "#この関数は本ノートブック内で使用されていません。This function is not used within this notebook.\n",
     "def splitChunkFile(filepath):\n",
     "    dirname = os.path.dirname(filepath)\n",
     "    output_path = dirname + \"/chunks/\"\n",
@@ -263,6 +264,52 @@
     "            out_fname = title + f\"_{i}.md\"\n",
     "            with open(os.path.join(chunks_path, out_fname), 'w', encoding='utf-8') as outfile:\n",
     "                outfile.write(split.page_content)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba772da8",
+   "metadata": {},
+   "source": [
+    "### 図の取り出し"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "839503ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_sample_document=\"./Large Language Models A Survey‾02.jpeg\"\n",
+    "with open(path_to_sample_document, \"rb\") as f:\n",
+    "    poller = document_analysis_client.begin_analyze_document(\n",
+    "        \"prebuilt-layout\",\n",
+    "        body=f,\n",
+    "        output=[AnalyzeOutputOption.FIGURES],\n",
+    "        content_type=\"application/octet-stream\",\n",
+    "    )\n",
+    "result: AnalyzeResult = poller.result()\n",
+    "operation_id = poller.details[\"operation_id\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "533e5a2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if result.figures:\n",
+    "    for figure in result.figures:\n",
+    "        if figure.id:\n",
+    "            response = document_analysis_client.get_analyze_result_figure(\n",
+    "                model_id=result.model_id, result_id=operation_id, figure_id=figure.id\n",
+    "            )\n",
+    "            with open(f\"Large Language Models A Survey‾{figure.id}.png\", \"wb\") as writer:\n",
+    "                writer.writelines(response)\n",
+    "else:\n",
+    "    print(\"No figures found.\")"
    ]
   }
  ],
