markdown comment to option

--- a/04_evaluation.ipynb
+++ b/04_evaluation.ipynb
@@ -120,14 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### OPTIONAL"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Groundedness Pro evaluator"
+    "### **[Optional]** Groundedness Pro evaluator"
    ]
   },
   {
@@ -251,6 +244,13 @@
     ")\n",
     "\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **[Optional]** Tracking the evaluation results in Azure AI Foundry project"
    ]
   },
   {
