--- a/11_usingIndexer01.ipynb
+++ b/11_usingIndexer01.ipynb
@@ -282,7 +282,13 @@
     "# Create an indexer  \n",
     "indexer_name = \"prius-indexer\" \n",
     "\n",
-    "indexer_parameters = None\n",
+    "# For public access to storage accounts, set indexer_parameters to \"None\"\n",
+    "#indexer_parameters = None\n",
+    "indexer_parameters = {\n",
+    "     \"configuration\": {\n",
+    "         \"executionEnvironment\": \"private\"\n",
+    "    }\n",
+    "}\n",
     "\n",
     "indexer = SearchIndexer(  \n",
     "    name=indexer_name,  \n",
