env variables added for indexer

--- a/11_usingIndexer01.ipynb
+++ b/11_usingIndexer01.ipynb
@@ -64,6 +64,9 @@
     "\n",
     "service_endpoint = os.environ[\"SEARCH_ENDPOINT\"] \n",
     "index_name = os.environ[\"SEARCH_INDEX_NAME_3\"]\n",
+    "indexer_name = os.environ[\"SEARCH_INDEXER_NAME\"]\n",
+    "data_source_name = os.environ[\"SEARCH_DATA_SOURCE_NAME\"]\n",
+    "skillset_name = os.environ[\"SEARCH_SKILLSET_NAME\"]\n",
     "key = os.environ[\"SEARCH_KEY\"]\n",
     "credential = AzureKeyCredential(key) \n",
     "\n",
@@ -162,7 +165,7 @@
     "indexer_client = SearchIndexerClient(endpoint=service_endpoint, credential=credential)\n",
     "container = SearchIndexerDataContainer(name=container_name)\n",
     "data_source_connection = SearchIndexerDataSourceConnection(\n",
-    "    name=\"prius-ds\",\n",
+    "    name=data_source_name,\n",
     "    type=\"azureblob\",\n",
     "    connection_string=connection_string,\n",
     "    container=container\n",
@@ -186,7 +189,7 @@
    "outputs": [],
    "source": [
     "# Create a skillset  \n",
-    "skillset_name = \"prius-skillset\"\n",
+    "#skillset_name = \"prius-skillset\"\n",
     "\n",
     "split_skill = SplitSkill(  \n",
     "    description=\"Split skill to chunk documents\",  \n",
@@ -280,7 +283,7 @@
    "outputs": [],
    "source": [
     "# Create an indexer  \n",
-    "indexer_name = \"prius-indexer\" \n",
+    "#indexer_name = \"prius-indexer\" \n",
     "\n",
     "# For public access to storage accounts, set indexer_parameters to \"None\"\n",
     "#indexer_parameters = None\n",
